Issue #13015: Fix a possible reference leak in defaultdict.__repr__. Patch by Suman Saha.